# Image_processing

./: .gitignore  CMakeLists.txt  README.md  first_submission.ipynb  gradient.py  histogram.py  image_filtering.py  image_upscaling.py  second_submission.ipynb  simu_graph.py  test.py  text.txt  third_submission.ipynb
src/: deconvolution.py  gradient.py  histogram.py  image_denoising.py  image_filtering.py  main.py  segmentation.py  show_image.py
test/: grad_test.py  gradtest.py
